package ar.utn.donatrack.logistica.models.flota;

public enum EstadoCamion {
    DISPONIBLE,
    EN_RUTA,
    MANTENIMIENTO
}
